[JAVA-40679] Clean up